Fixes CSS z-index issue

--- a/client/src/app/layout/styles.module.css
+++ b/client/src/app/layout/styles.module.css
@@ -21,6 +21,7 @@
     display:flex;
     flex-direction: column;
     position:absolute;
+    z-index: 9999;
     width:100%;
     border-radius:4px;
 }
